--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /venv/
 .DS_Store
-/data_analysis/output_csv/*
-!/data_analysis/output_csv/
+# /data_analysis/output_csv/*
+# !/data_analysis/output_csv/
